app/assets/stylesheets/less/_page.less
/* ... */
.milestones {
    list-style: none;
    margin: 0;

    .milestone {
        padding: 15px 0px; /* 15px 30px;*/
        overflow: hidden;
        &:last-of-type { border-bottom:none; }

        .bar{
            background: #fd6956 !important;
        }

      #simple-issue-list;

        .infos {
            width: 100%; /*700px*; /*660px;*/
            .contributors {
                margin: 0;
                list-style: none;
                overflow: hidden;
                .contributor {
                    float: left;
                    margin: 0 5px 5px 0;

                    .img-rounded {
                        width:34px; height:34px;
                        display:block;
                    }
                }
            }
            .meta-info {
                margin:5px 0 10px;
                .milestone-name {
                    font-size: 20px;
                    font-weight: bold;
                }
                .number {
                    font-size:20px;
                }
                .percentage   {
                    font-weight:bold;
                }
                .sp       {
                    margin: 0 5px;
                    color:#E4E4E4;
                }
                .due-date {
                    color: #666;
                    &.over { color:#f36c22; }
                }
            }

            .progress-wrap {
                overflow: hidden;
                color: #999;
                font-size: 11px;
                margin-top:15px;

                .progress {
                    height:8px;
                }

            }
            .desc {
                font-size: 11px;
                margin-top: 15px;
                padding: 15px;
                background-color: #EBEBEB;
                border-top:1px solid #D3D3D3;
                .border-radius(2px);
            }
            .actrow {
                text-align:right;
                padding-top:10px;
            }
        }
        .completion-rate {
            text-align: center;
            &.done {
                color: @orange;
            }

            i {
                .inline-block;
                font-style: normal;
                font-size: 0.6em;
                vertical-align: top;
                padding-top: 20px;
                margin-left:7px;
            }
        }
    }
}
.milestone-desc {
    background: #f7f7f7;
    padding: 10px 15px;
    margin: 15px 0;
    border: 1px solid #ddd;
    border-width:1px 0;
    .box-shadow(inset 0 0 5px #fff);
    .border-radius(2px);
}

.milesion-wrap {
    .progress {
        background-color: @state-open;

        &.empty { background-color: #B1B1B1; }

        .progress-bar {
            background-color: @state-closed;
            height: inherit;
        }
    }
}
.label.milestone-state {
    margin:0; padding:2px 0px; margin-right:3px;
    width:40px; text-align:center; font-size:11px;

    &.open { background-color:@state-open; }
    &.closed { background-color:@state-closed; }
}

//-- new milestone
.form-wrap {
    &.milestone {
        position:relative;

        .inner {
            &.left {
                .title-wrap {
                    label {
                        font-weight:bold;
                    }

                    input {
                        height: 30px;
                        width:100%;
                        box-sizing: border-box;
                        -moz-box-sizing: border-box;
                        -webkit-box-sizing: border-box;
                    }
                }

                .content-wrap {
                    label {
                        font-weight:bold;
                    }

                    textarea {
                        width:100%;
                        height: 261px;
                        resize: vertical;
                    }
                }

                .actions {
                    text-align: right;
                    height: 26px;
                    .save {
                        vertical-align: top;
                        margin-right:5px;
                    }
                }
            }

            &.right {
                position:absolute;
                top:22px;
                right:0;
                display:inline-block;
                vertical-align:top;
                width:250px;
                height:385px;
                padding: 15px 10px;
                /*background-color: #ececec;*/
                .border-radius(5px);

                .due-date    { width: 236px; margin-bottom:0; }
                .pika-single { width:232px; }
                .date-picker { margin-top:5px; }

                label { color:#777; }
            }
        }
    }
}
/* ... */

